// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text.js [espree] format 1`] = `
"Bad escape sequence in untagged template literal (6:18)
  4 | foo = markdown\`\\\\u{prettier}\\\\u{0065}\`;
  5 | foo = css\`\\\\u{prettier}\\\\u{0065}\`;
> 6 | foo = /* HTML */\`\\\\u{prettier}\\\\u{0065}\`;
    |                  ^
  7 | foo = /* GraphQL */\`\\\\u{prettier}\\\\u{0065}\`;
  8 |
  9 | foo = foo\`\\\\u{prettier}\${foo}pr\\\\u{0065}ttier\`;"
`;

exports[`text.js [flow] format 1`] = `
"Unexpected token ILLEGAL (1:12)
> 1 | foo = foo\`\\\\u{prettier}\\\\u{0065}\`;
    |            ^
  2 | foo = html\`\\\\u{prettier}\\\\u{0065}\`;
  3 | foo = graphql\`\\\\u{prettier}\\\\u{0065}\`;
  4 | foo = markdown\`\\\\u{prettier}\\\\u{0065}\`;"
`;

exports[`text.js [meriyah] format 1`] = `
"[6:20]: Invalid hexadecimal escape sequence (6:20)
  4 | foo = markdown\`\\\\u{prettier}\\\\u{0065}\`;
  5 | foo = css\`\\\\u{prettier}\\\\u{0065}\`;
> 6 | foo = /* HTML */\`\\\\u{prettier}\\\\u{0065}\`;
    |                    ^
  7 | foo = /* GraphQL */\`\\\\u{prettier}\\\\u{0065}\`;
  8 |
  9 | foo = foo\`\\\\u{prettier}\${foo}pr\\\\u{0065}ttier\`;"
`;

exports[`text.js [typescript] format 1`] = `
"Hexadecimal digit expected. (1:14)
> 1 | foo = foo\`\\\\u{prettier}\\\\u{0065}\`;
    |              ^
  2 | foo = html\`\\\\u{prettier}\\\\u{0065}\`;
  3 | foo = graphql\`\\\\u{prettier}\\\\u{0065}\`;
  4 | foo = markdown\`\\\\u{prettier}\\\\u{0065}\`;"
`;

exports[`text.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo = foo\`\\u{prettier}\\u{0065}\`;
foo = html\`\\u{prettier}\\u{0065}\`;
foo = graphql\`\\u{prettier}\\u{0065}\`;
foo = markdown\`\\u{prettier}\\u{0065}\`;
foo = css\`\\u{prettier}\\u{0065}\`;
foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;

foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = html\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = graphql\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = markdown\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = css\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = /* HTML */\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = /* GraphQL */\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;

foo = foo\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = html\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = graphql\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = markdown\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = css\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = /* HTML */\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = /* GraphQL */\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;

foo = foo\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = html\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = graphql\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = markdown\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = css\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = /* HTML */\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = /* GraphQL */\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;

=====================================output=====================================
foo = foo\`\\u{prettier}\\u{0065}\`;
foo = html\`\\u{prettier}\\u{0065}\`;
foo = graphql\`\\u{prettier}\\u{0065}\`;
foo = markdown\`\\u{prettier}\\u{0065}\`;
foo = css\`\\u{prettier}\\u{0065}\`;
foo = /* HTML */ \`\\u{prettier}\\u{0065}\`;
foo = /* GraphQL */ \`\\u{prettier}\\u{0065}\`;

foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = html\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = graphql\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = markdown\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = css\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = /* HTML */ \`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = /* GraphQL */ \`\\u{prettier}\${foo}pr\\u{0065}ttier\`;

foo = foo\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = html\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = graphql\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = markdown\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = css\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = /* HTML */ \`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = /* GraphQL */ \`pr\\u{0065}ttier\${foo}\\u{prettier}\`;

foo = foo\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = html\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = graphql\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = markdown\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = css\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = /* HTML */ \`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = /* GraphQL */ \`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;

================================================================================
`;
